@@ -2331,3 +2331,23 @@ FORMULA_TOTALCOMBATXP=100 + ((25*@x1) - (@x1*((25*@x1)^.5)))
 # @x4=sum of all dividers levels, @x5=total number of killers
 # @x6=highest killer level, @x7=killed monster level
 FORMULA_INDCOMBATXP=(@x1 * (@x2 / @x3)) < 100
+
+# FORMULA_MAXCARRY describes the maximum weight any mob can carry
+# at a time.
+# @x1=the mobs base body weight,   @x2=the current adjusted strength 
+# @x3=the mob base strength, @x4=the mobs maximum trainable strength
+FORMULA_MAXCARRY=@x1 + ((@x2 + 10.0) * @x2 * @x1 / 150.0) + (@x2 * 5.0)
+
+# FORMULA_MAXITEMS is the maximum number of items any mob can carry
+# at a time.
+# @x1=the number of wearable codes, @x2=mobs current char level
+# @x3=the current adjusted dexterity, @x4=the mob base dexterity
+# @x5=the mobs max trainable dex,   @x6=the current adjusted strength 
+# @x7=the mob base strength, @x8=the mobs maximum trainable strength
+FORMULA_MAXITEMS=(2 * @x1) + (2 * @x3) + (2 * @x2)
+
+# FORMULA_MAXFOLLOW is the maximum number of followers any mob can have
+# at a time.
+# @x1=mobs current char level,   @x2=the current adjusted charisma 
+# @x3=the mob base charisma, @x4=the mobs maximum trainable charisma
+FORMULA_MAXFOLLOW=1 + ( ( @x2 - 6.0 ) / 3.0)
