@@ -1230,6 +1230,24 @@
 			<FONT COLOR=WHITE>@INIValue?MASK=RPAWARDS&INIHELP@
 			<A HREF="javascript:openUp2('ZAPPERMASKS')">Click here for Mask help</a>
 		</TD></TR>
+        <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>MAX CARRY</FONT></TD><TD WIDTH=80% VALIGN=TOP>
+        <TEXTAREA NAME=FORMULA_MAXCARRY COLS=60 ROWS=2>@INIValue?MASK=FORMULA_MAXCARRY&VALUE@</TEXTAREA>
+        <BR>
+        <FONT COLOR=WHITE>@INIValue?MASK=FORMULA_MAXCARRY&INIHELP@
+        </TD></TR>
+        
+        <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>MAX ITEMS</FONT></TD><TD WIDTH=80% VALIGN=TOP>
+        <TEXTAREA NAME=FORMULA_MAXITEMS COLS=60 ROWS=2>@INIValue?MASK=FORMULA_MAXITEMS&VALUE@</TEXTAREA>
+        <BR>
+        <FONT COLOR=WHITE>@INIValue?MASK=FORMULA_MAXITEMS&INIHELP@
+        </TD></TR>
+        
+        <TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>MAX FOLLOWERS</FONT></TD><TD WIDTH=80% VALIGN=TOP>
+        <TEXTAREA NAME=FORMULA_MAXFOLLOW COLS=60 ROWS=2>@INIValue?MASK=FORMULA_MAXFOLLOW&VALUE@</TEXTAREA>
+        <BR>
+        <FONT COLOR=WHITE>@INIValue?MASK=FORMULA_MAXFOLLOW&INIHELP@
+        </TD></TR>
+        
 		
 		<TR><TD WIDTH=20% VALIGN=TOP><FONT COLOR=WHITE>LOGOUTMASK</FONT>
 			</TD><TD WIDTH=80% VALIGN=TOP>
